# PYTHON-ML-

./: .gitignore  Makefile  README.md  ann-tabularDatasets.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Minggu8/: 01-TFIDF-checkpoint.ipynb  02-Klasifikasi Text Mining Naive Bayes.ipynb
Multivariate-Linear-Regression-master/: Multivariate Linear Regression.ipynb
PythonBasic-2/: Python3-function_tuple_dict.ipynb
WINE-QUALITY(DATA PROCESING)/: WINE_QUALITY.ipynb
cluster/hierarchical/: hierarchical_clustering.ipynb
cluster/k-means/: k_means_clustering.ipynb
data/raw/: sample.csv
lat-heart/: Latihan_pert1.ipynb
notebook/: 02_asl.ipynb
notebooks/: 01_csv_pipeline_demo.ipynb
src/: __init__.py
src/basic/: __init__.py  examples.py
src/processing/: __init__.py  cleaning.py  features.py  io.py  run.py
tests/: test_cleaning.py  test_features.py
