[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "python-ml-pipeline"
version = "0.1.0"
description = "Intermediate Python basics + CSV data processing pipeline"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.scripts]
csv-pipeline = "src.processing.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
